--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   # pronouns         : # example: "she/her"  
   # bio              : "Short biography for the left-hand sidebar"
   # location         : "Earth"
-  employer         : "Red Brick University"
+  # employer         : "Red Brick University"
   uri              : # URL
   email            : "jingchuan.chen@connect.hku.hk" 
 
