--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "Jingchuan_Chen.jpg"
-  name             : "Jingchuan Chen"
+  name             : "Jingchuan Chen (陈京川)"
   # pronouns         : # example: "she/her"  
   # bio              : "Short biography for the left-hand sidebar"
   # location         : "Earth"
